# rag-cli-example

./: README.md  task.md
deploys/ollama-deploy/: README.md  docker-compose.yml
deploys/qdrant-deploy/: README.md  docker-compose.yml
rag-docs/: crawl_to_md.py  list.txt
rag-docs/pages-raw/: blog.md  de_education_msp.md  edu.md  edu_airsync.md  edu_classswift-software.md  edu_digital-displays.md  edu_education_monitors.md  edu_ifp51-viewboard.md  edu_myviewboard-3.0.md  edu_products_shop_projectors.md  edu_products_shop_viewboard.md  edu_software.md  edu_viewsonic-manager.md  entity.md  es_education_msp.md  fr_education_msp.md  pricing.md  products_classroom.md  products_companion.md  products_manager.md  products_originals.md  products_sens.md  products_whiteboard.md  solution_kb.md  solution_kb__mvb30-myviewboard.md  solution_kb_cmn.md  solution_kb_companion-and-whiteboard_sign-in-manage-whiteboard.md  solution_kb_en_US.md  solution_kb_en_US_airsync-overview_airsync-device-requirements.md  solution_kb_en_US_airsync-overview_airsync-firewall-requirements.md  solution_kb_en_US_airsync-overview_airsync-install-airsync.md  solution_kb_en_US_airsync-overview_airsync-settings.md  solution_kb_en_US_airsync-overview_airsync.md  solution_kb_en_US_broadcast-to-ifp_airsync-extended-screen-1.md  solution_kb_en_US_broadcast-to-ifp_share-ifp-to-device.md  solution_kb_en_US_broadcasting_layouts.md  (+151 more)
source/: .env.example  cli.py  jpy-nb.ipynb  pyproject.toml  server.py
source/ingestion/: populate_db.py
source/src/: db_handler.py  llm_handler.py  log_setup.py  prompts.py
