[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.8",
    "dspy>=3.0.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "neo4j>=5.25.0,<6.0.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.1",
    "playwright>=1.57.0",
    "qdrant-client>=1.16.2",
    "rich>=14.2.0",
    "sse-starlette>=3.1.2",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]
